--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  firebase_core: ^3.5.0
+  firebase_auth: ^5.3.0
+  cloud_firestore: ^5.4.2
+  firebase_database: ^11.1.3
+  firebase_storage: ^12.3.1
+  firebase_analytics: ^11.3.2
+  firebase_messaging: ^15.1.2
+  firebase_crashlytics: ^4.1.2
+  firebase_in_app_messaging: ^0.8.0+7
 
 dev_dependencies:
   flutter_test:
