--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_messaging: ^15.1.2
   firebase_crashlytics: ^4.1.2
   firebase_in_app_messaging: ^0.8.0+7
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
@@ -68,8 +69,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+      - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
