Profile HomePage Health Articles Manage patients Reminder Tm wallet Refer and Earn Location And help setting

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -5,13 +5,13 @@ plugins {
     id 'com.google.firebase.crashlytics'
     // END: FlutterFire Configuration
     id "kotlin-android"
-    // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
+
     id "dev.flutter.flutter-gradle-plugin"
 }
 
 android {
     namespace = "com.example.ninemedicine"
-    compileSdk = flutter.compileSdkVersion
+    compileSdk = 34
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
@@ -42,6 +42,7 @@ android {
         }
     }
 }
+
 
 flutter {
     source = "../.."
