--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   firebase_crashlytics: ^4.1.2
   firebase_in_app_messaging: ^0.8.0+7
   image_picker: ^1.1.2
+  geolocator: ^13.0.1
 
 dev_dependencies:
   flutter_test:
